2010-03-18  Ethan A Merritt  <merritt@u.washington.edu

	* docs/gnuplot.doc:  Add index entries and update description of mouse
	scrolling and hotkeys.

2010-03-17  Ethan A Merritt  <merritt@u.washington.edu

	* plot.c (main): Initialize c_token to a legal value at the start of
	interactive input.

	* docs/gnuplot.doc src/set.c src/term_api.h src/wxterminal/wxt_gui.cpp
	src/wxterminal/wxt_term.h term/cairo.trm term/emf.trm term/gd.trm
	term/pdf.trm term/post.h term/post.trm term/wxt.trm:

	New terminal option "fontscale <scale>".  This scale factor is applied
	to the nominal font size before use, so that you can scale the font 
	size up or down in parallel with scaling the output page up or down.
	This is mostly relevant for hardcopy output or embedded figures.

2010-03-14  Ethan A Merritt  <merritt@u.washington.edu

	* INSTALL config/README config/makefile.amg config/makefile.ami
	config/makefile.dj2 config/makefile.unx config/term_pc.h configure.in
	docs/Makefile.in docs/README docs/gnuplot.doc src/Makefile.am
	src/Makefile.maint src/amiga.c src/command.c src/command.h src/graph3d.c
	src/graphics.c src/graphics.h src/makefile.all src/makefile.awc
	src/plot.c src/scanner.c src/stdfn.c src/stdfn.h src/syscfg.h src/term.c
	src/term.h src/variable.c term/amiga.trm:

	Remove code specific to amiga platforms. 
	30 files changed, 43 insertions(+), 1941 deletions(-)

	* config/makefile.dj2 config/makefile.unx config/term_pc.h
	configure.in docs/doc2texi.el src/eval.c src/eval.h src/makefile.all
	src/makefile.awc src/plot.c src/syscfg.h src/term.c src/term.h
	term/apollo.trm term/gpr.trm:

	Remove code specific to support of Apollo workstations.
	The final gnuplot version in the apollo archives was gnuplot 2.0 (1996).
	15 files changed, 16 insertions(+), 1211 deletions(-)

	* src/pm3d.c src/tables.c src/term.c term/gd.trm term/pm.trm
	term/post.trm: Remove bits of dead code.

2010-03-13  Ethan A Merritt  <merritt@u.washington.edu
